# Astar-UI-Qt6

./: README.md
Astar/: CMakeLists.txt  graph_dc_area.2022-03-11.txt  main.cpp
Astar/exported_data/: GEOJson_data.json
Astar/modules/: GEOJson_exporter.ixx  calculator.ixx  file_reader_surgeon.ixx  pathfinder_engine.ixx  pathfinder_engine_bidirectional.ixx
Astar/modules/engine/: engine.cpp  engine.h
Astar/ui/: MapView.cpp  MapView.h  mainwindow.cpp  mainwindow.h
